--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "authors": [
     {
       "name": "flex",
-      "email": "null"
+      "email": "flexdev@en40.com"
     }
   ],
   "minimum-stability": "dev"
